fix horizontal overflow

--- a/style/style.css
+++ b/style/style.css
@@ -223,6 +223,7 @@ body {
     img {
         position: absolute;
         right: calc(2.8vw);
+        transform: translateX(0);
 
         max-width: calc(45vw);
         height: auto;
